@@ -7,13 +7,12 @@ import com.badlogic.gdx.graphics.GL20;
 import com.badlogic.gdx.graphics.Texture;
 import com.badlogic.gdx.graphics.g2d.SpriteBatch;
 
+import org.apache.commons.codec.binary.Base64;
+
 import java.security.Key;
 
 import javax.crypto.Cipher;
 import javax.crypto.spec.SecretKeySpec;
-
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 
 public class FileLoading extends ApplicationAdapter {
@@ -30,8 +29,8 @@ public class FileLoading extends ApplicationAdapter {
             Cipher cipher = Cipher.getInstance("AES");
             cipher.init(Cipher.ENCRYPT_MODE, key);
             byte[] encryptedBytes = cipher.doFinal(message.getBytes());
-            return new BASE64Encoder().encode(encryptedBytes);
-        } catch (Exception e){
+            return Base64.encodeBase64String(encryptedBytes);
+        } catch (Exception e) {
             Gdx.app.error(TAG, "Couldn't encrypt message: " + message, e);
         }
         return "Failed";
@@ -41,9 +40,9 @@ public class FileLoading extends ApplicationAdapter {
         try {
             Cipher cipher = Cipher.getInstance("AES");
             cipher.init(Cipher.DECRYPT_MODE, key);
-            byte[] encryptedBytes = new BASE64Decoder().decodeBuffer(encrypted);
+            byte[] encryptedBytes = Base64.decodeBase64(encrypted);
             return new String(cipher.doFinal(encryptedBytes));
-        } catch (Exception e){
+        } catch (Exception e) {
             Gdx.app.error(TAG, "Couldn't decrypt message: " + encrypted, e);
         }
         return "Failed";
@@ -61,7 +60,7 @@ public class FileLoading extends ApplicationAdapter {
 
         // TODO: Go find the text file in the android/assets directory
         // TODO: Get a FileHandle using Gdx.files.internal()
-        FileHandle file =  Gdx.files.internal("punchline");
+        FileHandle file = Gdx.files.internal("punchline");
 
         // TODO: Read the file using FileHandle.readString()
         String encrypted = file.readString();
